# examp

./: Nouveau document texte.txt
packaging_tutorial/: README.md  README.txt  pyproject.toml
packaging_tutorial/src/examp/: __init__.py  example.py
packaging_tutorial/src/examp.egg-info/: PKG-INFO  SOURCES.txt
packaging_tutorial/tests/: test1.py
